--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>ui.content</module>
 		<module>it.tests</module>
 		<module>it.launcher</module>
+		<module>SolrJarBundles</module>
 	</modules>
 
 	<properties>
@@ -63,7 +64,6 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			<!-- Maven Jar Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -514,7 +514,7 @@
 				<version>1.4</version>
 				<scope>test</scope>
 			</dependency>
-			<!--  Citytech AEM Component Plugin -->
+			<!-- Citytech AEM Component Plugin -->
 			<dependency>
 				<groupId>com.citytechinc.cq.cq-component-plugin</groupId>
 				<artifactId>cq-component-annotations</artifactId>
